refine fact checking nb comments

--- a/fact_checking.ipynb
+++ b/fact_checking.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section we are going to convert the raw `.csv` dataset to a structured `Pandas DataFrame`. In particular, we know the dataset to be structured as follows:\n",
+    "In this section we are going to convert the raw `.csv` dataset to a structured `Pandas DataFrame`. In particular, we will structure the `DataFrame` as follows:\n",
     "- `claim`: the fact that we have to verify\n",
     "- `evidence`: one of the facts that either support or refute the associated claim\n",
     "- `id`: a number associated to each claim (one claim can have more than evidence linked with it)\n",
@@ -175,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 237,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-12T15:10:21.200626Z",
-     "iopub.status.busy": "2020-12-12T15:10:21.200317Z",
-     "iopub.status.idle": "2020-12-12T15:10:22.286171Z",
-     "shell.execute_reply": "2020-12-12T15:10:22.285025Z",
-     "shell.execute_reply.started": "2020-12-12T15:10:21.200588Z"
+     "iopub.execute_input": "2020-12-18T13:46:32.148465Z",
+     "iopub.status.busy": "2020-12-18T13:46:32.148007Z",
+     "iopub.status.idle": "2020-12-18T13:46:33.112865Z",
+     "shell.execute_reply": "2020-12-18T13:46:33.111638Z",
+     "shell.execute_reply.started": "2020-12-18T13:46:32.148418Z"
     }
    },
    "outputs": [
@@ -275,7 +275,7 @@
        "4  10\\tThe island 's geography comprises relative...  10   REFUTES  train  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 238,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-12T15:10:22.429834Z",
-     "iopub.status.busy": "2020-12-12T15:10:22.429529Z",
-     "iopub.status.idle": "2020-12-12T15:10:22.494982Z",
-     "shell.execute_reply": "2020-12-12T15:10:22.493877Z",
-     "shell.execute_reply.started": "2020-12-12T15:10:22.429796Z"
+     "iopub.execute_input": "2020-12-18T13:46:38.501283Z",
+     "iopub.status.busy": "2020-12-18T13:46:38.500965Z",
+     "iopub.status.idle": "2020-12-18T13:46:38.574089Z",
+     "shell.execute_reply": "2020-12-18T13:46:38.572911Z",
+     "shell.execute_reply.started": "2020-12-18T13:46:38.501242Z"
     }
    },
    "outputs": [
@@ -321,7 +321,7 @@
        "array(['SUPPORTS', 'REFUTES'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,14 +339,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 239,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-12T15:10:24.054143Z",
-     "iopub.status.busy": "2020-12-12T15:10:24.053826Z",
-     "iopub.status.idle": "2020-12-12T15:10:24.181971Z",
-     "shell.execute_reply": "2020-12-12T15:10:24.180812Z",
-     "shell.execute_reply.started": "2020-12-12T15:10:24.054105Z"
+     "iopub.execute_input": "2020-12-18T13:46:44.008101Z",
+     "iopub.status.busy": "2020-12-18T13:46:44.007752Z",
+     "iopub.status.idle": "2020-12-18T13:46:44.152945Z",
+     "shell.execute_reply": "2020-12-18T13:46:44.151744Z",
+     "shell.execute_reply.started": "2020-12-18T13:46:44.008053Z"
     }
    },
    "outputs": [
@@ -384,14 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 240,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-12T15:10:26.796581Z",
-     "iopub.status.busy": "2020-12-12T15:10:26.796240Z",
-     "iopub.status.idle": "2020-12-12T15:10:26.863923Z",
-     "shell.execute_reply": "2020-12-12T15:10:26.862492Z",
-     "shell.execute_reply.started": "2020-12-12T15:10:26.796541Z"
+     "iopub.execute_input": "2020-12-18T13:48:00.399566Z",
+     "iopub.status.busy": "2020-12-18T13:48:00.399118Z",
+     "iopub.status.idle": "2020-12-18T13:48:00.477620Z",
+     "shell.execute_reply": "2020-12-18T13:48:00.476301Z",
+     "shell.execute_reply.started": "2020-12-18T13:48:00.399521Z"
     }
    },
    "outputs": [],
@@ -447,14 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 241,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-12T15:10:27.429670Z",
-     "iopub.status.busy": "2020-12-12T15:10:27.429361Z",
-     "iopub.status.idle": "2020-12-12T15:10:27.492764Z",
-     "shell.execute_reply": "2020-12-12T15:10:27.491603Z",
-     "shell.execute_reply.started": "2020-12-12T15:10:27.429632Z"
+     "iopub.execute_input": "2020-12-18T13:48:13.102064Z",
+     "iopub.status.busy": "2020-12-18T13:48:13.101586Z",
+     "iopub.status.idle": "2020-12-18T13:48:13.194115Z",
+     "shell.execute_reply": "2020-12-18T13:48:13.193007Z",
+     "shell.execute_reply.started": "2020-12-18T13:48:13.102011Z"
     }
    },
    "outputs": [
@@ -462,9 +462,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random evidence 127553\n",
-      "1\tThe film premiered at the Film Forum theatre in New York City on 19 August 2015 .\tFilm Forum\tFilm Forum\tNew York City\tNew York City\n",
-      "the film premiered at the film forum theatre in new york city on 19 august 2015\n"
+      "Random pair #85796\n",
+      "Raw claim: There is an action hero named Casey Ryback.\n",
+      "Pre-processed claim: there is an action hero named casey ryback\n",
+      "Raw evidence: 0\tCasey Ryback is a fictional character and action hero from the Under Siege films of the 1990s .\tUnder Siege\tUnder Siege\taction hero\taction hero\n",
+      "Pre-processed evidence: casey ryback is a fictional character and action hero from the under siege films of the 1990s\n"
      ]
     }
    ],
@@ -490,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 242,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-12-12T15:10:31.083477Z",
-     "iopub.status.busy": "2020-12-12T15:10:31.083145Z",
-     "iopub.status.idle": "2020-12-12T15:10:34.447095Z",
-     "shell.execute_reply": "2020-12-12T15:10:34.445826Z",
-     "shell.execute_reply.started": "2020-12-12T15:10:31.083436Z"
+     "iopub.execute_input": "2020-12-18T13:48:32.264660Z",
+     "iopub.status.busy": "2020-12-18T13:48:32.264185Z",
+     "iopub.status.idle": "2020-12-18T13:48:35.731181Z",
+     "shell.execute_reply": "2020-12-18T13:48:35.729835Z",
+     "shell.execute_reply.started": "2020-12-18T13:48:32.264606Z"
     }
    },
    "outputs": [
@@ -590,7 +592,7 @@
        "4  the island s geography comprises relatively lo...  10   REFUTES  train  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The maximum lenght of each batch is chosen to be nearest multiplier of `50` (a parameter that we picked by hand) to the maximum of the maximum number of tokens in the claims column ($m_c$) and the maximum number of tokens in the evidence column ($m_e$). In this way, the maximum number of tokens that our models will be able to process is equal to $\\max(m_c, m_e)$."
+    "The maximum lenght of each batch is chosen to be the nearest multiplier of `50` (a parameter that we picked by hand) to the maximum of the maximum number of tokens in the claims column ($m_c$) and the maximum number of tokens in the evidence column ($m_e$). In this way, the maximum number of tokens that our models will be able to process is equal to $\\max(m_c, m_e)$."
    ]
   },
   {
@@ -2424,7 +2426,7 @@
    "source": [
     "In this section we are going to train $4$ different baseline models. In particular, each one of them will be trained with the claim/evidence merging strategy `mean`, i.e. the output vector will simply be the average of the two embedded sentences. Moreover, the best performing model will also be trained with the other claim/evidence merging strategies, i.e. `sum` and `cat`, meaning that the output vector will be either the sum of the two embedded sentences or its concatenation. Finally, the best performing model will also be trained with the additional cosine similarity feature.\n",
     "\n",
-    "About evaluation, we are considering standard loss, accuracy and F1 measures for the binary classification problem (i.e. given one claim and one evidence, predict whether the claim holds by looking at that single evidence). Clearly, this evaluation method is not enough to have a true sense of the performance of our models: we would like to classifiy each evidence as true or false by looking at all of its related evidences. To do so, we computed a different `DataFrame` that contains the ground truth majority votes for each claim and we are aggregating predictions associated with the same claim in the training loop, so as to come up with additional metrics, which we called `*_claim_acc` and `*_claim_f1`, that represent accuracy and F1 over this broader sense."
+    "About evaluation, we are considering standard loss, accuracy and F1 measures for the binary classification problem (i.e. given one claim and one evidence, predict whether the claim holds by looking at that single evidence). Clearly, this evaluation method is not enough to have a true sense of the performance of our models: we would like to classifiy each claim as true or false by looking at all of its related evidences. To do so, we computed a different `DataFrame` that contains the ground truth majority votes for each claim and we are aggregating predictions associated with the same claim in the training loop, so as to come up with additional metrics, which we called `*_claim_acc` and `*_claim_f1`, that represent accuracy and F1 over this broader sense."
    ]
   },
   {
@@ -6315,11 +6317,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this notebook was to classify certain claims (given as sentences) as either being true or false (i.e. the problem is framed as binary classification one), by relying on a set of related evidences (also given as sentences), where both claims and evidences were extracted from the `fever` dataset. \n",
+    "The aim of this notebook was to classify certain claims (given as sentences) as either being true or false (i.e. the problem is framed as a binary classification one), by relying on a set of related evidences (also given as sentences), where both claims and evidences were extracted from the `fever` dataset. \n",
     "\n",
     "First of all, a bit of pre-processing had to be done on the sentences, in order to remove unwanted symbols (like tabs in the middle of text or final punctuation signs), get rid of unneeded information (like text between square brackets, indicating references or phonetic details) so as to reduce the overall amount of OOV words w.r.t. the embedding model we used.\n",
     "\n",
-    "Talking about embeddings, we decided to go for `GloVe` ones with a fixed dimension of $300$ and we built $3$ different embedding matrices (one for each dataset split) in a sequential way (i.e. by not considering a word as OOV more than once). Moreover, we decided to go for a simple random embedding for OOV words, that is sampled from a normal distribution with zero mean and small standard deviation.\n",
+    "Talking about embeddings, we decided to go for the `GloVe` ones with a fixed dimension of $300$ and we built $3$ different embedding matrices (one for each dataset split) in a sequential way (i.e. by not considering a word as OOV more than once). Moreover, we decided to go for a simple random embedding for OOV words, that is sampled from a normal distribution with zero mean and small standard deviation.\n",
     "\n",
     "Then, we built a single customizable `PyTorch` module, with parameters specifying how sentences should be encoded and how the two sentence embeddings related to claims and evidences should be merged. In particular, about sentence embeddings we implemented $4$ different baselines:\n",
     "1. `Bag of vectors`: the sentence embedding is the mean of all token embeddings\n",
@@ -6342,7 +6344,13 @@
     "\n",
     "The other models, i.e `(3)` and `(4)`, were instead able to converge to better solutions. In particular, model `(4)` seems to slightly outperform model `(3)` with `mean` merging and it gives even better results with the `cat` merging strategy. Results on the validation set show that they are able to reach around $73-75\\%$ of accuracy and $72-73\\%$ of F1 on the claim/evidence evaluation, while they reach around $73-74\\%$ accuracy and $72-73\\%$ F1 on the claim/all evidences evaluation.\n",
     "\n",
-    "Since model `(4)` with the `cat` merging strategy performed the best on the validation set, we decided to test it on the testing set and obtained comparable results, i.e. $83\\%$ of accuracy and $72\\%$ of F1 on the claim/evidence evaluation and $73\\%$ of accuracy and $72\\%$ of F1 on the claim/all evidences evaluation method."
+    "Since model `(4)` with the `cat` merging strategy performed the best on the validation set, we decided to evaluate it on the testing set and obtained comparable results, i.e. $83\\%$ of accuracy and $72\\%$ of F1 on the claim/evidence evaluation and $73\\%$ of accuracy and $72\\%$ of F1 on the claim/all evidences evaluation method.\n",
+    "\n",
+    "In order to get better results, some possible improvements could be made:\n",
+    "- Add more pre-processing steps, like handling numbers or foreign words/characters in specific ways\n",
+    "- Implement a more effective embedding strategy for OOV words, like the mean embedding of neighboring words in the dataset\n",
+    "- Set a different number of maximum tokens for claims and evidences, since claims are generally much shorter than evidences\n",
+    "- Try different neural models and architectures, like the addition of attention"
    ]
   },
   {
